crates/ndc-sqlserver/tests/snapshots/explain_tests__select_by_pk.snap
---
source: crates/ndc-sqlserver/tests/explain_tests.rs
expression: result.details.query
---
SELECT
  ISNULL([2_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      [0_Album].[Title] AS [Title]
    FROM
      [dbo].[Album] AS [0_Album] FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [2_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER
